Bug 493774 - Lockup crash using Transform Tool on a group that has pass through enabled
Summary: Lockup crash using Transform Tool on a group that has pass through enabled
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Transform (other bugs)
Version First Reported In: 5.2.5
Platform: Microsoft Windows Microsoft Windows
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: regression
: 493874 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-09-28 10:40 UTC by Ahab Greybeard
Modified: 2024-09-30 15:43 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ahab Greybeard 2024-09-28 10:40:28 UTC
SUMMARY
This happens with the 5.2.5 formal release appimage and Windows portable .zip package.
It does not happen with 5.2.3 or with 5.2.4 on Windows.

If a group has passthrough enabled then performing a simple Free Transform action on the group seems to work based on the canvas preview.
After pressing Apply, the application locks up with 1 CPU at 100% load.
On Windows, File -> Quit then saying 'No' to saving gives a notification that a Transform operation is still in progress and the application has to be terminated.
On Linux (appimage), File -> Quit then saying 'No' to saving gives closing of the application.

This was reported here: 
https://krita-artists.org/t/5-2-5-lockup-after-using-transform-tool-on-a-group-with-passthrough-enabled/102854

The initial report and observation is with one group with passthrough enabled.

Observation and comment by 'freyalupen' is with two groups with passthrough mode.
Comment being,  "It seems to be a regression of https://invent.kde.org/graphics/krita/-/commit/c2c12c46bf53e3a81d4ce200f2ec0a86bf586d47 "

STEPS TO REPRODUCE
See Summary and linked KA forum topic

OBSERVED RESULT
See Summary

EXPECTED RESULT
No lockup

SOFTWARE/OS VERSIONS
Windows 10

ADDITIONAL INFORMATION
Comment 1 Freya Lupen 2024-09-29 13:57:04 UTC
*** Bug 493830 has been marked as a duplicate of this bug. ***
Comment 2 Dmitry Kazakov 2024-09-30 08:57:49 UTC
*** Bug 493837 has been marked as a duplicate of this bug. ***
Comment 3 Dmitry Kazakov 2024-09-30 09:07:31 UTC
Git commit dcaf7fe2abf349dad8f5ba625060f979b3a26c8e by Dmitry Kazakov.
Committed on 30/09/2024 at 09:07.
Pushed by dkazakov into branch 'master'.

Fix stupid infinite loop when trying to update pass-through nodes
Related: bug 493830, bug 493837

M  +4    -4    libs/image/kis_image.cc

https://invent.kde.org/graphics/krita/-/commit/dcaf7fe2abf349dad8f5ba625060f979b3a26c8e
Comment 4 Dmitry Kazakov 2024-09-30 09:08:52 UTC
Git commit 7d1c63c3169cbd474272f2eb7cc17707f9ef266b by Dmitry Kazakov.
Committed on 30/09/2024 at 09:08.
Pushed by dkazakov into branch 'krita/5.2'.

Fix stupid infinite loop when trying to update pass-through nodes
Related: bug 493830, bug 493837

M  +4    -4    libs/image/kis_image.cc

https://invent.kde.org/graphics/krita/-/commit/7d1c63c3169cbd474272f2eb7cc17707f9ef266b
Comment 5 Dmitry Kazakov 2024-09-30 09:09:50 UTC
Git commit 206214621b4a416ca92808cf8f04dd372912ef68 by Dmitry Kazakov.
Committed on 30/09/2024 at 09:09.
Pushed by dkazakov into branch 'release/5.2.5'.

Fix stupid infinite loop when trying to update pass-through nodes
Related: bug 493830, bug 493837

M  +4    -4    libs/image/kis_image.cc

https://invent.kde.org/graphics/krita/-/commit/206214621b4a416ca92808cf8f04dd372912ef68
Comment 6 Dmitry Kazakov 2024-09-30 15:43:42 UTC
*** Bug 493874 has been marked as a duplicate of this bug. ***