Fix stupid infinite loop when trying to update pass-through nodes

BUG:493774
BUG:493830
BUG:493837